query list user

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -6,34 +6,56 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
+  <style>
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+    th,
+    td {
+      padding: 8px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+    }
+    tr:hover {
+      background-color: #ccc;
+    }
+  </style>
 
   <body>
     <div class="topnav">
-      <a class="active" href="#home">Home</a>
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
+      <a class="active" href="/">Home</a>
+      <a href="create">Create User</a>
     </div>
 
-    <div class="form-add-new">
-      <fieldset>
-        <legend>Form add new user</legend>
-        <div class="input-group">
-          <label>Email: </label>
-          <input type="text" />
-        </div>
-        <div class="input-group">
-          <label>Name: </label>
-          <input type="text" />
-        </div>
-        <div class="input-group">
-          <label>City</label>
-          <input type="text" />
-        </div>
-        <div>
-          <button>Save</button>
-        </div>
-      </fieldset>
+    <%= JSON.stringify(listUsers) %>
+
+    <div class="table-container">
+      <div class="title">List Users</div>
+      <table>
+        <tr>
+          <th>ID</th>
+          <th>Email</th>
+          <th>Name</th>
+          <th>City</th>
+          <th>Actions</th>
+        </tr>
+        <tr>
+          <td>Peter</td>
+          <td>Griffin</td>
+          <td>$100</td>
+          <td>MaCao</td>
+          <td>
+            <button>Edit</button>
+            <button>Delete</button>
+          </td>
+        </tr>
+        <tr>
+          <td>Lois</td>
+          <td>Griffin</td>
+          <td>$150</td>
+        </tr>
+      </table>
     </div>
   </body>
 </html>
