--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -49,3 +49,13 @@ button {
   margin: 10px;
   cursor: pointer;
 }
+
+.table-container {
+  padding: 15px 20px;
+}
+
+.title {
+  font-size: 25px;
+  font-weight: 600;
+  padding-bottom: 10px;
+}
